syntax = "proto3";

package pb;

option go_package = "my-grpc-app/generated;pb";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}